--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,45 +1,40 @@
-<nav class="navbar navbar-dark navbar-expand-lg bg-dark">
+<div class="container">
+  <nav class="navbar navbar-light navbar-expand-lg bg-light rounded-4 mt-2">
 
-    <div class="container">
+    <%= link_to "Moviez", root_path, class: "btn btn-dark fw-bold rounded-3 mx-2" %>
 
-      <%= link_to "Moviez", root_path, class: "navbar-brand" %>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      <ul class="navbar-nav w-100 d-flex justify-content-between">
+        <p class="nav-item">Menu<p>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <% if user_signed_in? %>
 
-        <ul class="navbar-nav w-100 d-flex justify-content-between">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle text-dark" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <%= current_user.email %>
+            </a>
+            <ul class="dropdown-menu dropdown-menu-light">
+              <li><%= link_to "Settings", edit_user_registration_path, class: "dropdown-item" %></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "dropdown-item" %></li>
+            </ul>
+          </li>
 
-          <% if user_signed_in? %>
+        <% else %>
 
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <%= current_user.email %>
-              </a>
-              <ul class="dropdown-menu dropdown-menu-dark">
-                <li><%= link_to "Settings", edit_user_registration_path, class: "dropdown-item" %></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "dropdown-item" %></li>
-              </ul>
+          <div class="d-flex">
+            <li class="nav-item">
+              <%= link_to "Sign In", new_user_session_path, class: "nav-link" %>
             </li>
+            <li class="nav-item">
+              <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %>
+            </li>
+          </div>
 
-          <% else %>
-
-            <div class="d-flex">
-              <li class="nav-item">
-                <%= link_to "Sign In", new_user_session_path, class: "nav-link" %>
-              </li>
-              <li class="nav-item">
-                <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %>
-              </li>
-            </div>
-
-          <% end %>
-        </ul>
-      </div>
-
+        <% end %>
+      </ul>
     </div>
 
-</nav>
+  </nav>
+</div>
