--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,12 @@
     <%= csrf_meta_tags %>
   </head>
 
-  <body>
+  <body class="bg-dark">
     <%= render "layouts/header" %>
     <div class="container">
-      <%= yield %>
+      <div class="bg-light mt-2 rounded-4 p-2">
+        <%= yield %>
+      </div>
     </div>
   </body>
 </html>
