--- a/app/views/movies/_movie.html.erb
+++ b/app/views/movies/_movie.html.erb
@@ -1,27 +1,38 @@
 <div id="<%= dom_id movie %>">
-  <p>
-    <strong>Title:</strong>
-    <%= movie.title %>
-  </p>
 
-  <p>
+  <div class="card">
+    <% if movie.image.attached? %>
+      <p>
+      <%= image_tag movie.image %>
+      </p>
+    <% end %>
+    <div class="card-body">
+      <p>
+      <strong>Title:</strong>
+      <%= movie.title %>
+      </p>
+
+      <p>
+      <strong>Director:</strong>
+      <%= movie.director %>
+      </p>
+    </div>
+  </div>
+  <!--
+    <p>
     <strong>Description:</strong>
     <%= movie.description %>
-  </p>
+    </p>
 
-  <p>
-    <strong>Director:</strong>
-    <%= movie.director %>
-  </p>
-
-  <p>
+    <p>
     <strong>Movie length:</strong>
     <%= movie.movie_length %>
-  </p>
+    </p>
 
-  <p>
+    <p>
     <strong>Rating:</strong>
     <%= movie.rating %>
-  </p>
+    </p>
+  -->
 
 </div>
