--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,14 +1,18 @@
-<p style="color: green"><%= notice %></p>
+<div class="card-header text-center text-bg-dark rounded-4">
+  <h1>Movies</h1>
+</div>
 
-<h1>Movies</h1>
-
-<div id="movies">
-  <% @movies.each do |movie| %>
-    <%= render movie %>
-    <p>
-      <%= link_to "Show this movie", movie %>
-    </p>
-  <% end %>
+<div class="card border border-dark border-3 text-bg-light rounded-4">
+  <div class="card-body">
+    <div id="movies">
+      <% @movies.each do |movie| %>
+        <%= render movie %>
+        <p>
+        <%= link_to "Show this movie", movie %>
+        </p>
+      <% end %>
+    </div>
+  </div>
 </div>
 
 <%= link_to "New movie", new_movie_path %>
