--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -3,7 +3,7 @@
   <h1>New movie</h1>
 </div>
 
-<div class="card border-dark text-bg-dark rounded-4">
+<div class="card border border-dark border-3 text-bg-light rounded-4">
   <div class="card-body">
     <%= render "form", movie: @movie %>
   </div>
