--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,28 @@
  */
 
 @import "bootstrap";
+
+.pagination > li > a {
+  background-color: white;
+  color: #212529;
+}
+
+.pagination > li > a:focus,
+.pagination > li > a:hover,
+.pagination > li > span:focus,
+.pagination > li > span:hover {
+  color: #212529;
+  background-color: #eee;
+  border-color: #ddd;
+}
+
+.pagination > .active > a {
+  color: white;
+  background-color: #212529;
+  border: solid 1px #212529;
+}
+
+.pagination > .active > a:hover {
+  background-color: #212529;
+  border: solid 1px #212529;
+}
