--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,10 +3,28 @@
 
     <%= link_to "Moviez", root_path, class: "btn btn-dark fw-bold rounded-3 mx-2" %>
 
+    <% if user_signed_in? %>
+      <%= link_to "New movie", new_movie_path, class: "btn btn-dark fw-bold rounded-3" %>
+    <% end %>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-      <ul class="navbar-nav w-100 d-flex justify-content-between">
-        <p class="nav-item">Menu<p>
+      <ul class="navbar-nav w-100 justify-content-between">
+
+        <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle text-dark" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Menu
+              </a>
+              <ul class="dropdown-menu dropdown-menu-light">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
 
         <% if user_signed_in? %>
 
