--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,17 +2,15 @@
   <h1>Movies</h1>
 </div>
 
-<div class="card border border-dark border-3 text-bg-light rounded-4">
-  <div class="card-body">
-    <div id="movies">
-      <% @movies.each do |movie| %>
-        <%= render movie %>
-        <p>
-        <%= link_to "Show this movie", movie %>
-        </p>
-      <% end %>
-    </div>
+<div id="movies">
+  <div class="d-flex justify-content-center">
+    <% @movies.each do |movie| %>
+      <%= link_to (render movie), movie, class: "btn btn-outline-dark rounded-4 mx-2"%>
+    <% end %>
+  </div>
+
+  <div class="d-flex justify-content-center mt-2">
+    <%= paginate @movies %>
   </div>
 </div>
 
-<%= link_to "New movie", new_movie_path %>
