Fix turbo methods

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload" %>
+    <%= csp_meta_tag %>
     <%= csrf_meta_tags %>
+    <%= javascript_importmap_tags %>
   </head>
 
   <body class="bg-dark">
