--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,11 @@
 
     <div class="container">
       <% if notice %>
-        <%= render "layouts/alerts" %>
+        <%= render "layouts/notice" %>
+      <% end %>
+
+      <% if alert %>
+        <%= render "layouts/alert" %>
       <% end %>
 
       <div class="bg-light mt-2 rounded-4 p-2">
