--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,8 +1,46 @@
-<%= render @movie %>
+<div class="card-header text-center text-bg-dark rounded-4">
+  <h1><%= @movie.title %></h1>
+</div>
+
+<div class="d-flex">
+  <%= render @movie %>
+
+  <div class="mx-1"></div>
+
+  <div class="card border border-dark border-3 text-bg-light rounded-4 w-100 mt-1">
+    <div class="card-body">
+      <strong>Director: </strong> <%= @movie.director %> <br/>
+      <strong>Description: </strong> <%= @movie.description %>
+    </div>
+  </div>
+</div>
+
+<hr>
 
 <div>
-  <%= link_to "Edit this movie", edit_movie_path(@movie) %> |
-  <%= link_to "Back to movies", movies_path %>
-
-  <%= button_to "Destroy this movie", @movie, method: :delete %>
+  <%= link_to "Edit this movie", edit_movie_path(@movie), class: "btn btn-dark btn-sm" %>
+  <%= link_to "Delete this movie", @movie, data: { "turbo_method": :delete, "turbo_confirm": "Are you sure?" }, class: "btn btn-dark btn-sm" %>
 </div>
+
+<em><%= "#{@reviews.length} reviews" %></em>
+
+<% if can_comment %>
+  <%= link_to "Write Review", new_movie_review_path(@movie), class: "btn btn-warning" %>
+<% end %>
+
+<% if @reviews.blank? %>
+  <h3>No reviews yet</h3>
+<% else %>
+  <% @reviews.each do |review| %>
+    <div class="reviews">
+      <div class="star-rating" data-score=<%= review.rating %>></div>
+
+      <p><%= review.comment %></p>
+      <% if user_signed_in? %>
+        <% if current_user.id == review.user_id %>
+          <%= link_to "Edit this review", edit_movie_review_path(@movie, review) %>
+        <% end %>
+      <% end %>
+    </div>
+  <% end %>
+<% end %>
