--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -1,10 +1,5 @@
-<h1>Editing movie</h1>
+<div class="card-header text-center text-bg-dark rounded-4">
+  <h1>Editing movie</h1>
+</div>
 
 <%= render "form", movie: @movie %>
-
-<br>
-
-<div>
-  <%= link_to "Show this movie", @movie %> |
-  <%= link_to "Back to movies", movies_path %>
-</div>
