--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,3 +40,8 @@
   background-color: #212529;
   border: solid 1px #212529;
 }
+
+.cardimage {
+  height: 250px !important;
+  width: 250px !important;
+}
