--- a/app/views/movies/_movie.html.erb
+++ b/app/views/movies/_movie.html.erb
@@ -1,21 +1,10 @@
-<div id="<%= dom_id movie %>">
-  <% if movie.image.attached? %>
-    <%= image_tag movie.image, size: "250x250", class: "rounded-4 mt-1" %>
-  <% else %>
-    <svg class="bd-placeholder-img card-img-top rounded-4 mt-1" width="250" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-      <title>Placeholder</title>
-      <rect width="100%" height="100%" fill="#868e96"/>
-      <text x="50%" y="50%" fill="#dee2e6">Thumbnail</text>
-    </svg>
-  <% end %>
-
-  <br/>
-
-  <strong><%= movie.title %></strong>
-
-  <br/>
-
-  <%= movie.director %>
-  
-
-</div>
+<% if movie.image.attached? %>
+  <%= image_tag movie.image, size: "250x250", class: "rounded-4 mt-1" %>
+<% else %>
+  <svg class="bd-placeholder-img card-img-top rounded-4 mt-1 cardimage" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+    <title>Placeholder</title>
+    <rect width="100%" height="100%" fill="#868e96"/>
+    <text x="50%" y="50%" fill="#dee2e6">Thumbnail</text>
+  </svg>
+<% end %>
+<br/>
