--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,9 +20,11 @@
                 Menu
               </a>
               <ul class="dropdown-menu dropdown-menu-light">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><a class="dropdown-item" href="#">There</a></li>
+                <li><a class="dropdown-item" href="#">should</a></li>
+                <li><a class="dropdown-item" href="#">have</a></li>
+                <li><a class="dropdown-item" href="#">been</a></li>
+                <li><a class="dropdown-item" href="#">categories</a></li>
               </ul>
             </li>
           </ul>
