--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,52 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div>
+  <div class="card-header text-center text-bg-dark rounded-4">
+    <h2>Edit <%= resource_name.to_s.humanize %></h2>                                                                                      
+  </div>                                                                                                                                  
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <div class="d-flex justify-content-center">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <div class="card-body border border-dark border-2 rounded-4 p-3">
+        <div class="field">
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email", class: "form-control", style: "width: 255px" %>
+        </div>
+
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+        <% end %>
+
+        <i class="p-2">leave password blank <br/> if you don't want to change it</i>
+        <div class="field d-flex mt-2">
+          <%= f.password_field :password, autocomplete: "new-password", placeholder: @minimum_password_length ? "Password (#{@minimum_password_length} symbols minimum)" : "Password", class: "form-control", style: "width: 255px" %>
+        </div>
+
+        <div class="field mt-2">
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Password confirmation", class: "form-control", style: "width: 255px" %>
+        </div>
+
+        <div class="field mt-2">
+          <%= f.password_field :current_password, autocomplete: "current-password", placeholder: "Current password", class: "form-control", style: "width: 255px"  %>
+        </div>
+
+        <div class="actions mt-2 mb-2">
+          <%= f.submit "Update", class: "btn btn-outline-dark btn-sm" %>
+        </div>
+      <% end %>
+      <%= link_to "Back", :back, class: "link-dark" %>
+      </div>
+  </div>
+</div>
+
+<div class="mt-4">
+  <div class="card-header text-center text-bg-dark rounded-4">
+    <h2>Unhappy?</h2>
   </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
+  <div class="card-body border border-danger border-2 rounded-4 p-3">
+    <div class="d-flex justify-content-center">
+      <h5 class="card-title mx-2">You can delete your account</h5>
+      <%= link_to "Cancel my account", registration_path(resource_name), data: { "turbo-method": :delete, "turbo-confirm": "Are you sure?" }, class: "btn btn-outline-danger btn-sm" %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
