--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,29 @@
-<h2>Sign up</h2>
+<div class="card-header text-center text-bg-dark rounded-4">
+  <h2>Sign Up</h2>                                                                                                                        
+</div>                                                                                                                                    
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<div class="d-flex justify-content-center">
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>                                                
+    <%= render "devise/shared/error_messages", resource: resource %>    
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="card-body border border-dark border-2 rounded-4 p-3">
+      <div class="field form-group">    
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email", class: "form-control", style: "width: 255px" %>    
+      </div>    
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+      <div class="field form-group mt-2">    
+        <%= f.password_field :password, autocomplete: "new-password", placeholder: @minimum_password_length ? "Password (#{@minimum_password_length} symbols minimum)" : "Password", class: "form-control", style: "width: 255px" %>    
+      </div>    
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+      <div class="field form-group mt-2">    
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Password confirmation", class: "form-control", style: "width: 255px" %>    
+      </div>    
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+      <div class="actions mt-2 mb-2">    
+        <%= f.submit "Sign up", class: "btn btn-outline-dark btn-sm"  %>    
+      </div>    
+  <% end %>    
 
-<%= render "devise/shared/links" %>
+  <%= render "devise/shared/links" %>    
+  </div>    
+</div>
