--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,7 +33,7 @@
         <% if user_signed_in? %>
 
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-dark" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-bs-toggle="dropdown">
               <%= current_user.email %>
             </a>
             <ul class="dropdown-menu dropdown-menu-light">
