--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -10,6 +10,7 @@
   <div class="card border border-dark border-3 text-bg-light rounded-4 w-100 mt-1">
     <div class="card-body">
       <strong>Director: </strong> <%= @movie.director %> <br/>
+      <strong>Rating: </strong> <%= @average_rating %> <br/>
       <strong>Description: </strong> <%= @movie.description %>
     </div>
   </div>
